@@ -1,3 +1,9 @@
+Thu Jul 01 18:00:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* WebServer.m: Make ([setPort:secure:]) return a status.
+	* WebServerBundles.m: Check that web server is able to start.
+	* WebServer.h: ditto
+
 Wed Jun 30 05:40:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
 
 	* GNUmakefile: Use ./obj as location for library to link,
